<resources>
    <string name="app_name">Views_and_animations</string>
    <string name="digit_timer_default">00:00:00</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="plus_hour">+hour</string>
    <string name="more_speed">x100</string>
    <string name="norm_speed">x1</string>
    <string name="minus_hour">-hour</string>
</resources>