<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clock_custom_view_croup.xml">

    <com.example.views_and_animations.custom_analog_clock.ClockView
        android:id="@+id/clockView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clockView"
        android:text="@string/start"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clockView"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_time_speed"
        android:layout_width="370dp"
        android:layout_height="190dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/more_speed"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="0dp"
            android:text="@string/more_speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/norm_speed"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="0dp"
            android:text="@string/norm_speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/plus_hour"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="0dp"
            android:text="@string/plus_hour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/minus_hour"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="0dp"
            android:text="@string/minus_hour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>